--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.dodi.myservice" >
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    package="com.dodi.myservice">
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +14,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyService"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <service
+            android:name=".MyBoundService"
+            android:enabled="true"
+            android:exported="false"></service>
         <service
             android:name=".MyForegroundService"
             android:enabled="true"
-            android:exported="false" >
-        </service>
+            android:exported="false"></service>
         <service
             android:name=".MyBackgroundService"
             android:enabled="true"
@@ -26,7 +30,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
